--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,13 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
-        "creocoder/yii2-nested-sets": "0.9.*",
         "php-forge/html": "dev-main",
         "sjaakp/yii2-icon": "^1.0",
         "yii2-extensions/bootbox": "dev-main",
         "yii2-extensions/bootstrap5":"dev-main",
         "yii2-extensions/core-library": "dev-main",
-        "yiisoft/yii2": "^2.2"
+        "yii2-extensions/nested-sets-behavior": "dev-main",
+        "yiisoft/yii2": "dev-add-tests-boolean-pgsql"
     },
     "require-dev": {
         "maglnet/composer-require-checker": "^4.6",
@@ -92,6 +92,10 @@
         {
             "type": "composer",
             "url": "https://asset-packagist.org"
+        },
+        {
+            "type": "github",
+            "url": "https://github.com/terabytesoftw/yii2"
         }
     ]
 }
