--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -21,11 +21,13 @@ on:
       - 'phpunit.xml.dist'
       - 'psalm.xml'
 
-name: Composer require checker
+name: dependency-check
 
 jobs:
   composer-require-checker:
-    uses: yiisoft/actions/.github/workflows/composer-require-checker.yml@master
+    uses: php-forge/actions/.github/workflows/composer-require-checker.yml@main
+    secrets:
+      AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
     with:
       os: >-
         ['ubuntu-latest']
