--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,8 +22,10 @@ on:
 name: static analysis
 
 jobs:
-  phpstan:
+  psalm:
     uses: php-forge/actions/.github/workflows/phpstan.yml@main
+    secrets:
+      AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
     with:
       os: >-
         ['ubuntu-latest']
