--- a/composer.json
+++ b/composer.json
@@ -1,41 +1,96 @@
 {
-    "name": "yii2/template",
+    "name": "yii2-extensions/blog",
     "type": "library",
-    "description": "_____",
+    "description": "Simple blog.",
     "keywords": [
-        "_____"
+        "blog",
+        "simple",
+        "yii2"
     ],
     "license": "mit",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
+        "ext-filter": "*",
+        "ext-mbstring": "*",
+        "php-forge/html": "dev-main",
+        "sjaakp/yii2-icon": "^1.0",
+        "vova07/yii2-imperavi-widget": "*",
+        "yii2-extensions/asset-bootbox": "dev-main",
+        "yii2-extensions/asset-bootstrap5": "dev-main",
+        "yii2-extensions/asset-fontawesome": "dev-main",
+        "yii2-extensions/bootstrap5":"dev-main",
+        "yii2-extensions/core-library": "dev-main",
+        "yii2-extensions/datetime-picker": "dev-main",
+        "yii2-extensions/filepond": "dev-main",
+        "yii2-extensions/nested-sets-behavior": "dev-main",
+        "yii2-extensions/selectize": "dev-main",
+        "yii2-extensions/summernote": "dev-main",
+        "yiisoft/strings": "^2.3",
         "yiisoft/yii2": "^2.2"
+
     },
     "require-dev": {
         "maglnet/composer-require-checker": "^4.6",
         "phpunit/phpunit": "^10.2",
-        "yii2-extensions/phpstan": "dev-main"
+        "yii2-extensions/phpstan": "dev-main",
+        "yiisoft/config": "^1.3"
     },
     "autoload": {
         "psr-4": {
-            "yii\\template\\": "src"
+            "Yii\\Blog\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "yii\\template\\tests\\": "tests"
+            "Yii\\Blog\\tests\\": "tests"
         }
     },
     "extra": {
         "branch-alias": {
             "dev-main": "1.0.x-dev"
+        },
+        "config-plugin": {
+            "params": "params.php",
+            "params-web": "params-web.php",
+            "yii2-blog": "extension.php"
+        },
+        "config-plugin-options": {
+            "source-directory": "config"
+        },
+        "config-plugin-environments": {
+            "tests": {
+                "common": "tests/common/*.php",
+                "console": [
+                    "$common",
+                    "tests/console/*.php"
+                ],
+                "web": [
+                    "$common",
+                    "web/*.php",
+                    "tests/web/*.php"
+                ],
+                "params": "params.php",
+                "params-console": "$params",
+                "params-web": [
+                    "$params",
+                    "tests/params-web.php"
+                ]
+            }
+        },
+        "installer-types": ["bower-asset", "npm-asset"],
+        "installer-paths": {
+            "./node_modules/{$name}/": ["type:bower-asset", "type:npm-asset"]
         }
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            "yiisoft/yii2-composer": true
+            "yiisoft/yii2-composer": true,
+            "yiisoft/config": true,
+            "composer/installers": true,
+            "oomphinc/composer-installers-extender": true
         }
     },
     "scripts": {
