--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": ">=8.1",
         "ext-filter": "*",
         "ext-mbstring": "*",
+        "php-forge/awesome-component": "dev-main",
         "php-forge/html": "dev-main",
         "sjaakp/yii2-icon": "^1.0",
         "vova07/yii2-imperavi-widget": "*",
