--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "require": {
         "php": ">=8.1",
         "ext-filter": "*",
+        "ext-gd": "*",
         "ext-mbstring": "*",
         "php-forge/awesome-component": "dev-main",
         "php-forge/html": "dev-main",
